# faas-dask

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_lambda.txt
benchmarks/: experiments.py  main.py  run.py
faascheduler/: executor.py  main.py  parameters.py  stats.py
faascheduler/aws/: __init__.py  main.py
faascheduler/cache/: __init__.py  aws.py  disk.py
faascheduler/local/: __init__.py  cluster.py  worker.py
faascheduler/scheduler/: __init__.py  base.py  dictionary.py
faascheduler/scheduler/sql/: __init__.py  sql.py
faascheduler/task_queue/: __init__.py  aws.py  multiprocessing.py
lambda/: setup_package.sh
lambda/src/: main.py
